# aPG

./: .gitignore  Dockerfile  README.md  index.html  main.py  pyproject.toml  requirements.txt  script.js  style.css
apg-worker/: package-lock.json  package.json  wrangler.toml
apg-worker/src/: index.ts
app/: config.yaml  main.py
app/static/: script.js  style.css
app/templates/: index.html
static/: style.css
templates/: index.html
